--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,15 @@ dist
 dist-ssr
 *.local
 
+# Environment and secrets
+.env
+.env.*
+!.env.example
+
+# Migration outputs
+backups/
+exports/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
