feat: add image optimization and reencoding functionality
- Added sharp library for image processing.
- Introduced environment variables for image output format and quality.
- Implemented image optimization in media upload route.
- Added a migration script to reencode existing images in the database.
- Enhanced authentication middleware to fetch user email if missing.
- Updated database queries to handle case-insensitive email checks.

--- a/server/.env.example
+++ b/server/.env.example
@@ -9,6 +9,9 @@ MINIO_ACCESS_KEY=change-me
 MINIO_SECRET_KEY=change-me
 MINIO_USE_SSL=false
 MINIO_FORCE_PATH_STYLE=true
+IMAGE_OPTIMIZATION_ENABLED=true
+IMAGE_OUTPUT_FORMAT=webp
+IMAGE_OUTPUT_QUALITY=78
 AUTH_ENABLED=true
 AUTH0_ISSUER_BASE_URL=https://dev-73r62jvmx1usuvld.us.auth0.com/
 AUTH0_AUDIENCE=https://dev-73r62jvmx1usuvld.us.auth0.com/api/v2/
