feat: ajouter des variables d'environnement pour l'optimisation des images

--- a/docker-compose.coolify.app-only.yml
+++ b/docker-compose.coolify.app-only.yml
@@ -18,6 +18,9 @@ services:
       MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
       MINIO_USE_SSL: ${MINIO_USE_SSL}
       MINIO_FORCE_PATH_STYLE: ${MINIO_FORCE_PATH_STYLE}
+      IMAGE_OPTIMIZATION_ENABLED: ${IMAGE_OPTIMIZATION_ENABLED}
+      IMAGE_OUTPUT_FORMAT: ${IMAGE_OUTPUT_FORMAT}
+      IMAGE_OUTPUT_QUALITY: ${IMAGE_OUTPUT_QUALITY}
       UPLOADS_DIR: /app/uploads
 
       AUTH_ENABLED: "true"
